Fixed Logo alignment and changed to local animations
read the title :P

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 	align-items: center;
 	justify-content: center;
 	align-content: center;
-	flex-direction: row;
+	flex-direction: column;
 }
 
 #title{
